Comparison experiments, adjust Rating function, movie NB

--- a/BaselineExperiments/Untitled.ipynb
+++ b/BaselineExperiments/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 74,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-05T07:24:34.513623Z",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 75,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-05T07:26:04.571229Z",
@@ -31,11 +31,13 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(1.0, 104219), (2.0, 102410), (3.0, 201302), (4.0, 382994), (5.0, 906608)]\n"
-     ]
+     "data": {
+      "text/plain": "                                          reviewText  overall\n0  This is a charming version of the classic Dick...      4.0\n1  It was good but not as emotionally moving as t...      3.0\n2  Don't get me wrong, Winkler is a wonderful cha...      3.0\n3  Henry Winkler is very good in this twist on th...      5.0\n4  This is one of the best Scrooge movies out.  H...      4.0",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>reviewText</th>\n      <th>overall</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>This is a charming version of the classic Dick...</td>\n      <td>4.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>It was good but not as emotionally moving as t...</td>\n      <td>3.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Don't get me wrong, Winkler is a wonderful cha...</td>\n      <td>3.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Henry Winkler is very good in this twist on th...</td>\n      <td>5.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>This is one of the best Scrooge movies out.  H...</td>\n      <td>4.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -46,29 +48,30 @@
     "        data.append(json.loads(l.strip()))\n",
     "\n",
     "data = pd.DataFrame.from_dict(data)\n",
-    "target = data['overall']\n",
-    "text = data['reviewText']\n",
-    "\n",
-    "print(sorted(Counter(target).items()))\n"
+    "df = data[['reviewText', 'overall']]\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 76,
    "outputs": [
     {
-     "data": {
-      "text/plain": "       reviewerID        asin                         reviewerName helpful  \\\n0   ADZPIG9QOCDG5  0005019281  Alice L. Larson \"alice-loves-books\"  [0, 0]   \n1  A35947ZP82G7JH  0005019281                        Amarah Strack  [0, 0]   \n2  A3UORV8A9D5L2E  0005019281                      Amazon Customer  [0, 0]   \n3  A1VKW06X1O2X7V  0005019281           Amazon Customer \"Softmill\"  [0, 0]   \n4  A3R27T4HADWFFJ  0005019281                                 BABE  [0, 0]   \n\n                                          reviewText  overall  \\\n0  This is a charming version of the classic Dick...      4.0   \n1  It was good but not as emotionally moving as t...      3.0   \n2  Don't get me wrong, Winkler is a wonderful cha...      3.0   \n3  Henry Winkler is very good in this twist on th...      5.0   \n4  This is one of the best Scrooge movies out.  H...      4.0   \n\n                                        summary  unixReviewTime   reviewTime  \n0                     good version of a classic      1203984000  02 26, 2008  \n1                        Good but not as moving      1388361600  12 30, 2013  \n2         Winkler's Performance was ok at best!      1388361600  12 30, 2013  \n3  It's an enjoyable twist on the classic story      1202860800  02 13, 2008  \n4                              Best Scrooge yet      1387670400  12 22, 2013  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>reviewerID</th>\n      <th>asin</th>\n      <th>reviewerName</th>\n      <th>helpful</th>\n      <th>reviewText</th>\n      <th>overall</th>\n      <th>summary</th>\n      <th>unixReviewTime</th>\n      <th>reviewTime</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>ADZPIG9QOCDG5</td>\n      <td>0005019281</td>\n      <td>Alice L. Larson \"alice-loves-books\"</td>\n      <td>[0, 0]</td>\n      <td>This is a charming version of the classic Dick...</td>\n      <td>4.0</td>\n      <td>good version of a classic</td>\n      <td>1203984000</td>\n      <td>02 26, 2008</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>A35947ZP82G7JH</td>\n      <td>0005019281</td>\n      <td>Amarah Strack</td>\n      <td>[0, 0]</td>\n      <td>It was good but not as emotionally moving as t...</td>\n      <td>3.0</td>\n      <td>Good but not as moving</td>\n      <td>1388361600</td>\n      <td>12 30, 2013</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>A3UORV8A9D5L2E</td>\n      <td>0005019281</td>\n      <td>Amazon Customer</td>\n      <td>[0, 0]</td>\n      <td>Don't get me wrong, Winkler is a wonderful cha...</td>\n      <td>3.0</td>\n      <td>Winkler's Performance was ok at best!</td>\n      <td>1388361600</td>\n      <td>12 30, 2013</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>A1VKW06X1O2X7V</td>\n      <td>0005019281</td>\n      <td>Amazon Customer \"Softmill\"</td>\n      <td>[0, 0]</td>\n      <td>Henry Winkler is very good in this twist on th...</td>\n      <td>5.0</td>\n      <td>It's an enjoyable twist on the classic story</td>\n      <td>1202860800</td>\n      <td>02 13, 2008</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>A3R27T4HADWFFJ</td>\n      <td>0005019281</td>\n      <td>BABE</td>\n      <td>[0, 0]</td>\n      <td>This is one of the best Scrooge movies out.  H...</td>\n      <td>4.0</td>\n      <td>Best Scrooge yet</td>\n      <td>1387670400</td>\n      <td>12 22, 2013</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "2.0\n",
+      "3.0\n",
+      "4.0\n",
+      "5.0\n"
+     ]
     }
    ],
    "source": [
-    "data.head()\n",
-    "data.drop(['reviewerID', 'asin', 'reviewerName', 'helpful', ])"
+    "ratings = ['1.0', '2.0', '3.0', '4.0', '5.0']\n",
+    "for r in ratings:\n",
+    "    print(r)"
    ],
    "metadata": {
     "collapsed": false,
