--- a/BaselineExperiments/imdb_benchmark.ipynb
+++ b/BaselineExperiments/imdb_benchmark.ipynb
@@ -2,23 +2,190 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "import numpy as np\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
     "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
     "import os\n",
     "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
+   "outputs": [],
+   "source": [
+    "# imdb = pd.read_csv('../Data/IMDB Dataset.csv')\n",
+    "headerlist = ['target', 'id', 'date', 'flag', 'user', 'text']\n",
+    "tweets = pd.read_csv('../Data/training.1600000.processed.noemoticon.csv', names=headerlist, encoding='latin1')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [],
+   "source": [
+    "tweets.head()\n",
+    "target = tweets['target']\n",
+    "text = tweets['text']\n",
+    "# imdb['sentiment'].value_counts()\n",
+    "# text = imdb['review']\n",
+    "# target = imdb['sentiment']"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "4    800000\n0    800000\nName: target, dtype: int64"
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweets['target'].value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [],
+   "source": [
+    "cv = CountVectorizer(ngram_range=(1, 2))\n",
+    "cv.fit(text)\n",
+    "text_count = cv.transform(text)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training target statistics: Counter({0: 720079, 4: 719921})\n",
+      "Testing target statistics: Counter({4: 80079, 0: 79921})\n",
+      "train: 0.9/ test: 0.1\n",
+      "Accuracy:0.80284375\n",
+      "Precision:0.8046514875899266\n",
+      "F1:0.8025643449145818\n",
+      "col_0       0      4\n",
+      "target              \n",
+      "0       67237  12684\n",
+      "4       18861  61218\n",
+      "Training target statistics: Counter({0: 640558, 4: 639442})\n",
+      "Testing target statistics: Counter({4: 160558, 0: 159442})\n",
+      "train: 0.8/ test: 0.2\n",
+      "Accuracy:0.801603125\n",
+      "Precision:0.8035587717191386\n",
+      "F1:0.8013314692810638\n",
+      "col_0        0       4\n",
+      "target                \n",
+      "0       134173   25269\n",
+      "4        38218  122340\n",
+      "Training target statistics: Counter({0: 560588, 4: 559412})\n",
+      "Testing target statistics: Counter({4: 240588, 0: 239412})\n",
+      "train: 0.7/ test: 0.3\n",
+      "Accuracy:0.800625\n",
+      "Precision:0.8026629401593561\n",
+      "F1:0.8003243357026755\n",
+      "col_0        0       4\n",
+      "target                \n",
+      "0       201463   37949\n",
+      "4        57751  182837\n",
+      "Training target statistics: Counter({0: 480694, 4: 479306})\n",
+      "Testing target statistics: Counter({4: 320694, 0: 319306})\n",
+      "train: 0.6/ test: 0.4\n",
+      "Accuracy:0.79858125\n",
+      "Precision:0.8008820318514054\n",
+      "F1:0.7982296042370276\n",
+      "col_0        0       4\n",
+      "target                \n",
+      "0       268905   50401\n",
+      "4        78507  242187\n",
+      "Training target statistics: Counter({0: 400453, 4: 399547})\n",
+      "Testing target statistics: Counter({4: 400453, 0: 399547})\n",
+      "train: 0.5/ test: 0.5\n",
+      "Accuracy:0.79647875\n",
+      "Precision:0.7989836704602467\n",
+      "F1:0.796070756700558\n",
+      "col_0        0       4\n",
+      "target                \n",
+      "0       336483   63064\n",
+      "4        99753  300700\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "from sklearn import metrics\n",
+    "\n",
+    "nb = MultinomialNB()\n",
+    "list_test = [0.1, 0.2, 0.3, 0.4, 0.5]\n",
+    "for i in list_test:\n",
+    "    test_size = i\n",
+    "    train_size = 1 - i\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(text_count, target, test_size=i, random_state=109)\n",
+    "\n",
+    "    print('Training target statistics: {}'.format(Counter(y_train), sorted(y_train)))\n",
+    "    print('Testing target statistics: {}'.format(Counter(y_test), sorted(y_test)))\n",
+    "\n",
+    "    nb.fit(X_train, y_train)\n",
+    "    y_pred = nb.predict(X_test)\n",
+    "    print(\"train: \" + str(train_size) + \"/ test: \" + str(test_size))\n",
+    "    accuracy = str(metrics.accuracy_score(y_test, y_pred))\n",
+    "    precision = str(metrics.precision_score(y_test, y_pred, average=\"macro\"))\n",
+    "    f1 = str(metrics.f1_score(y_test, y_pred, average=\"macro\"))\n",
+    "    print(\"Accuracy:\" + accuracy)\n",
+    "    print(\"Precision:\" + precision)\n",
+    "    print(\"F1:\" + f1)\n",
+    "    print(pd.crosstab(y_test, y_pred))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [
     "reviews_train = []\n",
@@ -40,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -64,8 +231,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'r'"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "reviews_train[0]"
    ],
