--- a/BaselineExperiments/nltk_moviereviews.ipynb
+++ b/BaselineExperiments/nltk_moviereviews.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'nltk.corpus.reader.plaintext.CategorizedPlaintextCorpusReader'>\n"
+      "<class 'nltk.corpus.util.LazyCorpusLoader'>\n"
      ]
     }
    ],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
