--- a/ComparisonExperiments/MoviesTV_1_variation.ipynb
+++ b/ComparisonExperiments/MoviesTV_1_variation.ipynb
@@ -162,13 +162,7 @@
     "# Model Accuracy, how often is the classifier correct?\n",
     "print(\"Accuracy:\",metrics.accuracy_score(y_test, y_pred))\n",
     "print(\"Precision:\", metrics.precision_score(y_test, y_pred, average=\"macro\"))\n",
-    "print(\"F1:\", metrics.f1_score(y_test, y_pred, average=\"macro\"))\n",
-    "\n",
-    "<Term Name=\"LineItem\" Type=\"Collection(UI.DataFieldAbstract)\" Nullable=\"false\" AppliesTo=\"EntityType\">\n",
-    "    <Property Name=\"TypeName\" Type=\"Edm.String\" Nullable=\"false\">\n",
-    "        <Annotation Term=\"Core.Description\" String=\"Collection of data fields for representation in a table or list\"/>\n",
-    "        <Annotation Term=\"UI.ThingPerpsective\"/>\n",
-    "</Term>"
+    "print(\"F1:\", metrics.f1_score(y_test, y_pred, average=\"macro\"))\n"
    ],
    "metadata": {
     "collapsed": false,
