preprocessing + update experiments

--- a/BaselineExperiments/Baseline_Experiment_Type_2-SVM.ipynb
+++ b/BaselineExperiments/Baseline_Experiment_Type_2-SVM.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-22T12:52:36.666393Z",
@@ -44,22 +44,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1697533\n",
-      "200000\n"
+      "194439\n",
+      "194439\n"
      ]
     }
    ],
    "source": [
     "data = []\n",
-    "with gzip.open('../Data/reviews_Movies_and_TV_5.json.gz') as f:\n",
+    "with gzip.open('../Data/reviews_Cell_Phones_and_Accessories_5.json.gz') as f:\n",
     "    for l in f: \n",
     "        data.append(json.loads(l.strip()))\n",
     "        \n",
     "print(len(data))\n",
     "\n",
-    "data = random.sample(data, 200000)\n",
-    "\n",
     "df = pd.DataFrame.from_dict(data)\n",
+    "df = df[['reviewText', 'overall']]\n",
     "print(len(df))\n",
     "\n",
     "target = df['overall']\n",
@@ -68,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-18T15:03:14.273446Z",
@@ -77,26 +76,61 @@
    },
    "outputs": [],
    "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "cv = CountVectorizer(ngram_range=(1, 3))\n",
+    "cv.fit(text)\n",
+    "text_count = cv.transform(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "from imblearn.under_sampling import RandomUnderSampler\n",
+    "rus = RandomUnderSampler(random_state=None)\n",
+    "text_count_res, target_res = rus.fit_resample(text_count, target)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "train_size = 0.9\n",
     "test_size = 0.1\n",
     "\n",
     "# Split dataset into training set and test set\n",
-    "X_train, X_test, y_train, y_test = train_test_split(text, target, test_size = test_size, random_state=109) \n",
+    "X_train, X_test, y_train, y_test = train_test_split(text_count_res, target_res, test_size = test_size, random_state=109)\n",
+    "clf = SVC(kernel='linear')\n",
+    "print('created SVC')\n",
+    "clf.fit(X_train, y_train)\n",
+    "print('trained')\n",
+    "y_pred = clf.predict(X_test)\n",
+    "print('predicted')\n",
     "\n",
-    "\n",
-    "# label encode the target variable\n",
-    "encoder = preprocessing.LabelEncoder()\n",
-    "y_train = encoder.fit_transform(y_train)\n",
-    "y_test = encoder.fit_transform(y_test)\n",
-    "\n",
-    "# Feature Extraction: n-grams with TF-IDF\n",
-    "tfidf_vect_ngram = TfidfVectorizer(analyzer='word', token_pattern=r'\\w{1,}', ngram_range=(2,3), max_features=5000)\n",
-    "tfidf_vect_ngram.fit(text)\n",
-    "\n",
-    "# transform the training and validation data using count vectorizer object\n",
-    "xtrain_tfidf_ngram =  tfidf_vect_ngram.transform(X_train)\n",
-    "xtest_tfidf_ngram =  tfidf_vect_ngram.transform(X_test)"
-   ]
+    "accuracy = str(metrics.accuracy_score(y_test, y_pred))\n",
+    "precision = str(metrics.precision_score(y_test, y_pred, average=\"macro\"))\n",
+    "f1 = str(metrics.f1_score(y_test, y_pred, average=\"macro\"))\n",
+    "print(\"Accuracy:\" + accuracy)\n",
+    "print(\"Precision:\" + precision)\n",
+    "print(\"F1:\" + f1)\n",
+    "print(pd.crosstab(y_test, y_pred))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
   },
   {
    "cell_type": "code",
