--- a/BaselineExperiments/nltk_moviereviews.ipynb
+++ b/BaselineExperiments/nltk_moviereviews.ipynb
@@ -303,7 +303,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "possibl\n",
+      "possibl\n",
+      "import\n",
+      "import\n",
+      "use\n",
+      "use\n",
+      "best\n",
+      "better\n",
+      "destabil\n",
+      "care\n",
+      "gone\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.stem import PorterStemmer\n",
+    "ps = PorterStemmer()\n",
+    "print(ps.stem(\"possibility\"))\n",
+    "print(ps.stem(\"possible\"))\n",
+    "print(ps.stem(\"important\"))\n",
+    "print(ps.stem(\"importance\"))\n",
+    "print(ps.stem(\"used\"))\n",
+    "print(ps.stem(\"using\"))\n",
+    "print(ps.stem(\"best\"))\n",
+    "print(ps.stem(\"better\"))\n",
+    "print(ps.stem(\"destabilizing\"))\n",
+    "print(ps.stem(\"caring\"))\n",
+    "print(ps.stem(\"gone\"))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "outputs": [
     {
      "name": "stdout",
@@ -320,7 +364,11 @@
       "Us\n",
       "u\n",
       "you're\n",
-      "powerd\n"
+      "power\n",
+      "destabilize\n",
+      "try\n",
+      "possibly\n",
+      "care\n"
      ]
     }
    ],
@@ -350,7 +398,11 @@
     "print(lemmatizer.lemmatize(\"Us\"))\n",
     "print(lemmatizer.lemmatize(\"us\"))\n",
     "print(lemmatizer.lemmatize(\"you're\"))\n",
-    "print(ps.stem(\"powerd\"))"
+    "print(ps.stem(\"powered\"))\n",
+    "print(lemmatizer.lemmatize('destabilizing', pos='v'))\n",
+    "print(lemmatizer.lemmatize('tried', pos='v'))\n",
+    "print(lemmatizer.lemmatize('possibly'))\n",
+    "print(lemmatizer.lemmatize('caring', pos='v'))"
    ],
    "metadata": {
     "collapsed": false,
