--- a/BaselineExperiments/Untitled.ipynb
+++ b/BaselineExperiments/Untitled.ipynb
@@ -26,6 +26,7 @@
     "from nltk.tokenize.treebank import TreebankWordDetokenizer\n",
     "from nltk.corpus import stopwords\n",
     "from textblob import TextBlob\n",
+    "from nltk.stem import PorterStemmer\n",
     "from scipy.stats.stats import pearsonr"
    ]
   },
@@ -159,6 +160,9 @@
     }
    ],
    "source": [
+    "'\"It has been heard that Mobilink; one of the leading telecommunication brands of Pakistan is now launching its 3G phones with extremely low price with awesome specs. Although the date of launch has not been announced yet, but it is expected to be within few days. According to some hints&hellip;\"@en-US'\n",
+    "\n",
+    "\n",
     "df.loc[1178]['reviewText']"
    ],
    "metadata": {
@@ -188,182 +192,7 @@
    "cell_type": "code",
    "execution_count": 288,
    "outputs": [],
-   "source": [
-    "# Preprocessing\n",
-    "def strip_html(t):\n",
-    "    soup = BeautifulSoup(t, \"html.parser\")\n",
-    "    return soup.get_text()\n",
-    "\n",
-    "def remove_between_square_brackets(t):\n",
-    "    return re.sub('\\[[^]]*\\]', '', t)\n",
-    "\n",
-    "def remove_between_angle_brackets(t):\n",
-    "    return re.sub(r'<[^>]+>', '', t)\n",
-    "\n",
-    "def remove_accented_chars(t):\n",
-    "    return unidecode.unidecode(t)\n",
-    "\n",
-    "def replace_contractions(t):\n",
-    "    return contractions.fix(t)\n",
-    "\n",
-    "def remove_numbers(t):\n",
-    "    return re.sub(r'([a-zA-Z]*[0-9])|(\\S*[0-9]\\S)|([0-9])', '', t)\n",
-    "\n",
-    "def remove_weblinks(t):\n",
-    "    return re.sub(r'http\\S+', '', t)\n",
-    "\n",
-    "def unescape(t):\n",
-    "    return html.unescape(t)\n",
-    "\n",
-    "def remove_punctuation(t):\n",
-    "    return re.sub(r'([^\\w!)])\\1{1,}|(_{2,})|([^\\w\\s])', ' ', t)\n",
-    "\n",
-    "def remove_extra_whitespaces(t):\n",
-    "    return re.sub(r'[\\s]{2,}', ' ', t)\n",
-    "\n",
-    "# experiment what is better 1. lowercase all 2. only lowercase if all caps\n",
-    "def to_lowercase(t):\n",
-    "    words = nltk.word_tokenize(t)\n",
-    "    new_words = []\n",
-    "    # for word in words:\n",
-    "    #     if word.isupper():\n",
-    "    #         new_words.append(word)\n",
-    "    #     else:\n",
-    "    #         new_word = word.lower()\n",
-    "    #         new_words.append(new_word)\n",
-    "    for word in words:\n",
-    "        new_word = word.lower()\n",
-    "        new_words.append(new_word)\n",
-    "    new_review = TreebankWordDetokenizer().detokenize(new_words)\n",
-    "    return new_review\n",
-    "\n",
-    "def remove_stopwords(t):\n",
-    "    words = nltk.word_tokenize(t)\n",
-    "    new_words = []\n",
-    "    for word in words:\n",
-    "        if word not in stops:\n",
-    "            new_words.append(word)\n",
-    "    new_review = TreebankWordDetokenizer().detokenize(new_words)\n",
-    "    return new_review\n",
-    "\n",
-    "def lemmatize_with_postag(sentence):\n",
-    "    sent = TextBlob(sentence)\n",
-    "    tag_dict = {\"J\": 'a',\n",
-    "                \"N\": 'n',\n",
-    "                \"V\": 'v',\n",
-    "                \"R\": 'r'}\n",
-    "    words_and_tags = [(w, tag_dict.get(pos[0], 'n')) for w, pos in sent.tags]\n",
-    "    lemmatized_list = [wd.lemmatize(tag) for wd, tag in words_and_tags]\n",
-    "    return \" \".join(lemmatized_list)\n",
-    "\n",
-    "def preprocess_reviews(reviews):\n",
-    "    ## Denoise\n",
-    "    # - remove unnecessary space and <br>, HTML tags\n",
-    "    reviews = [strip_html(line) for line in reviews]\n",
-    "    reviews = [remove_between_square_brackets(line) for line in reviews]\n",
-    "    reviews = [remove_between_angle_brackets(line) for line in reviews]\n",
-    "\n",
-    "    # remove weblinks\n",
-    "    reviews = [remove_weblinks(line) for line in reviews]\n",
-    "\n",
-    "    # - spacing after .,-\n",
-    "    # reviews = [re.sub(r'(?<=[.,-])(?=[^\\s])', r' ', line) for line in reviews]\n",
-    "\n",
-    "    # - standardising of lettering, e.g. cafe instead of café\n",
-    "    reviews = [unidecode.unidecode(line) for line in reviews]\n",
-    "    reviews = [unescape(line) for line in reviews]\n",
-    "\n",
-    "    # Expand contractions\n",
-    "    reviews = [replace_contractions(line) for line in reviews]\n",
-    "\n",
-    "    # remove numbers and connected number units,\n",
-    "    reviews = [remove_numbers(line) for line in reviews]\n",
-    "\n",
-    "    # remove multiple special characters expect !\n",
-    "    reviews = [remove_punctuation(line) for line in reviews]\n",
-    "\n",
-    "    # lowercase, except all caps\n",
-    "    reviews = [to_lowercase(line) for line in reviews]\n",
-    "\n",
-    "    reviews = [lemmatize_with_postag(line) for line in reviews]\n",
-    "\n",
-    "    # stopword removal\n",
-    "    reviews = [remove_stopwords(line) for line in reviews]\n",
-    "\n",
-    "    # remove multiple white spaces\n",
-    "    reviews = [remove_extra_whitespaces(line) for line in reviews]\n",
-    "    return reviews\n",
-    "\n",
-    "reviews_clean = preprocess_reviews(df['reviewText'])\n",
-    "# - tokenize into single words or n-grams (more than 3 times frequency)\n",
-    "# - additional domain specific stopword list\n",
-    "\n",
-    "# print(vectorizer.get_stop_words())\n",
-    "# stop_words = [\"i\", \"me\", \"you\"]\n",
-    "# final_words = []\n",
-    "# for word in vectorizer.get_feature_names():\n",
-    "#     if word not in stop_words:\n",
-    "#         final_words.append(word)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 289,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "['connect also jabra simple version disconnect device complaint except connect variety beep tell go sometimes beep somewhat confusing boo beep mean disconnect phone connect disconnected power signal voice prompt connect remove ambiguity good not good stream music disconnect interrupt music copy least annoying tendency make connected break connection phone time settle but _does_ settle eventually problem go away otherwise would star unacceptable speakerphone edit well no not give much hassle connect ipod turn take short drive today phone turn _never_ stop alternate connect disconnect think happen eventually start ignore phone entirely but show bluetooth connect ipod still stream music maybe copy receive never similar problem jabra use phone would think two product company would equally effective make keep bluetooth connection connect two device simultaneously advertised mention though connect ipod touch turn painful initial pairing work but connecting not eventually find turn bluetooth touch _sometimes_ result connection but often enough would drop connection immediately work bluetooth stream would drop second music every minute go back use jabra',\n 'buy replacement otterbox commuter frankly big ugly not hold well already stealth armor iphone one advertise tough armor protection _does_ offer smidge rubber corner would need micrometer measure comparison stealth but extra protection port remain expose although increase lightning opening accommodate thicker rd party cable small rubber button stealth replace large rectangular equivalent tough but really tough look tough but not really say tough stealth plastic outer still suffer scuffing stealth well really need improve coating thing apple cutout back nice touch however',\n 'device let u track key wallet thus answer perennial question leave key alternately use find phone suffer apparent total existence failure fire free trackr app tap ring device trackr fob chirp loudly press button trackr fob phone tablet app play tone bluetooth device not range fob not talk phone find disconnect foot pretty decent bluetooth find phone functionality work trackr app run background but _does_ run hard predict phone dump background task not run recently not assure still run also obviously no help phone not charge fob lose connection phone probably due distance give little chirp chirp pretty quiet though not think would notice besides play tone app locate trackr function show last known position device rather show phone last connected since trackr not gps anything like obviously not useful find trackr nearby since show _you_ intend case leave trackr somewhere like home maybe hotel room store crowd source track system someone else run trackr app walk fob get update location device rough edge no pair button fob way reset pairing remove battery fairly often not work experiment switch device fob fail pair least half dozen time io app not like run tablet function not work landscape orientation portrait lose connection either app close background get distant take reconnect bad android device test trackr nexus ipad everything work ipad several function not nexus show trackr location pull map but not show icon fob location press button fob not nexus play alarm even app run foreground io app permit track multiple fob but android version not way add second one neither app seem way forget device pair fob want pair one device switch back forth remove battery insert whichever device talk first connect one would search forever fob moderately large fob go x x little thicker something would want wallet time since get enough card keychain fob seem reasonable hole fit keyring easily not think battery consumption significant least not show meaningful draw battery usage summary nexus update update android app recently thought would give another go not find trackr fob use ipad app say connect tell make fob beep not hear anything pretty sure somewhere office since signal strength high']"
-     },
-     "execution_count": 289,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[k for k in reviews_clean if ' he ' in k]\n",
-    "# reviews_clean[82]"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 276,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "\"first case look ok. fairly easy open etc good use extended battery but not really real protection extend battery drop mean sure cover black thin rubber outer housing but it.the little locking tab tab break easily especially open close inner case many time take phone proximity sensor yes confirm due design interfere proximity sensor test not face plate make call put phone close head still see screen go black.i test make call barley move front cover over\\\\near phone sensor activate shuts screen remove faceplate.the issue front top area face plate picture camera sensor ear speaker show longish round area one receive like rectangle type shape kind look like boat shape alone might sensor not work correctly.since item twenty dollar rather try modify case return it.over think ok case not really think bad could serve purpose would not try put drop test even upon call seller purchase tell not even drop test item sell it.i test front rear camera flash nothing case interfere camera's.i return item seller agreed take item back refund purchase price include shipping cost update later process.so not go bash seller item people may really like may work not work would give start face plate not interfere proximity sensor area front face plate match stock photo issue stock photo round\\\\ovalish one receive boat shape.the give basic phone case not interfere rear front camera 's belt holster seem pretty sturdy strong not seem like phone case easily pop not really difficult remove housing simply follow accommodate use extend screen protector work fine receive tight screen not find issue find near bottom little airy like but no issue use touch screen no problem one stick screen protector phone use conjunction faceplate screen protector use faceplate screen protector clear bother hd picture display seller quick reply email concern request return front face plate interfere proximity lock tab seem like sure break easily therefore not good idea constantly open close\\\\take phone no real padding\\\\protection extend battery except outer thin rubber housing not easily remove screen protector glue inside faceplate would cut screen protector faceplate not want use therefore void warranty\""
-     },
-     "execution_count": 276,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def lemmatize_with_postag(sentence):\n",
-    "    sent = TextBlob(sentence)\n",
-    "    tag_dict = {\"J\": 'a',\n",
-    "                \"N\": 'n',\n",
-    "                \"V\": 'v',\n",
-    "                \"R\": 'r'}\n",
-    "    words_and_tags = [(w, tag_dict.get(pos[0], 'n')) for w, pos in sent.tags]\n",
-    "    lemmatized_list = [wd.lemmatize(tag) for wd, tag in words_and_tags]\n",
-    "    return \" \".join(lemmatized_list)\n",
-    "\n",
-    "# Lemmatize\n",
-    "sentence='first, case looks ok. fairly easy open, etc . good using extended battery but not really real protection extended battery drop . mean sure, covered black thin rubber outer housing but it.the little locking tabs . tabs break easily especially open close inner case many times (take phone) proximity sensor - yes, confirmed due design, interfere proximity sensor . tested not face plate, making call putting phone close head still see screen go black.i tested making call barley moving front cover over\\\\near phone sensor activates shuts screen remove faceplate.the issue, front top area face plate . pictures, camera, sensors ear speaker, shows longish round area . one received like rectangle type shape . kind looks like boat shape . alone might sensor not working correctly.since item twenty dollars, rather trying modify case, returning it.over, think ok case not really think bad . could serve purpose . would not try putting drop test . even upon calling seller purchased, told not even drop test item selling it.i test front rear camera flash nothing case interferes camera\\'s.i returning item seller agreed take item back refund purchase price including shipping costs . update later process.so, , not going bash seller item people may really like may work . not work . would given starts face plate not interfere proximity sensors area front face plate matched stock photo . issue, stock photo, round\\\\ovalish . one received boat shape.the give basic phone . case not interfere rear front camera\\'s belt holster seems pretty sturdy strong . not seem like phone case easily pop not really difficult remove housing simply follow accommodate use extended screen protector works fine . received``tight screen\". not find issue . find near bottom little airy like but no issues using touch screen no problems one stick screen protectors phone use conjunction faceplate screen protector . used faceplate screen protector clear bother hd picture display seller quick reply email, concerns request return front face plate interfere proximity locking tabs seem like sure break easily . therefore not good idea constantly open close\\\\take phone no real padding\\\\protection extended battery except outer thin rubber housing not easily remove screen protector glued inside faceplate . would cut screen protector faceplate not want use . therefore voiding warranty.'\n",
-    "lemmatize_with_postag(sentence)"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
