--- a/BaselineExperiments/nltk_moviereviews.ipynb
+++ b/BaselineExperiments/nltk_moviereviews.ipynb
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "outputs": [
     {
      "name": "stdout",
@@ -318,6 +318,8 @@
       "best\n",
       "better\n",
       "destabil\n",
+      "destabil\n",
+      "destin\n",
       "care\n",
       "gone\n"
      ]
@@ -335,8 +337,10 @@
     "print(ps.stem(\"best\"))\n",
     "print(ps.stem(\"better\"))\n",
     "print(ps.stem(\"destabilizing\"))\n",
+    "print(ps.stem(\"destabile\"))\n",
+    "print(ps.stem(\"destination\"))\n",
     "print(ps.stem(\"caring\"))\n",
-    "print(ps.stem(\"gone\"))"
+    "print(ps.stem(\"gone\"))\n"
    ],
    "metadata": {
     "collapsed": false,
